# Final-Year-Project-

./: .gitignore  LICENSE  README.md  api.py  compose.yaml  dashboard.py  main.py  pyproject.toml  requirements.txt
DB/: db_conn.py
DB/LLM_storage/: ResponseManager.py
DB/prompts/: Prompt.py  PromptBatch.py  PromptManager.py
LLM/: ResponseGenerator.py
LLM/clients/: azure_client.py  base.py  openai_client.py
LLM/judge/: helper.py  judge.py  pydantic_models.py
metrics/hybrid/: hybrid_tester.py  scorer.py
metrics/traditional/: scorer.py
tests/: test_prompt_manager.py  test_pydantic_models.py  test_scorer.py
tests/LLM_tests/: test_cost.py  test_latency.py  test_trad_metrics.py
